test/errors/type/list/__add1.yasl
mt.lookup([], .__add)(true, [])
